# learning

./: .gitignore  README.md  hello world
c_programming/letusc/2chapter_cInstructions/: 2ha.c  2hc.c  2hd.c  2hi.c  pg31_operator_hier.c  power_of_2.c
c_programming/letusc/3chapter_decisionControlInstruction/: 3cb.c  3ce.c  example3_1.c
c_programming/letusc/4chapter_morecompdecmaking/: 4bb.c  4cg.c  4da.c  4ed.c
c_programming/letusc/5chapter_loopcontrolinstruc/: 5af.c  5bb.c
cprog/letusc/1chapter_gettingstarted/: 1fa.c  simple_interest.c  test.c
cprog/letusc/2chapter_cInstructions/: 2ea.c  2hb.c  2he.c
cprog/letusc/3chapter_decisionControlInstruction/: 3bg.c  3ca.c  3cc.c  3cd.c  3cf.c  test.c
cprog/letusc/4chapter_morecompdecmaking/: 4cc.c  4de.c  4dg.c  4ec.c  4ee.c
cprog/letusc/5chapter_loopcontrolinstruc/: 5ba.c  5bc.c  5bd.c  5be.c  5bg.c  5bh.c  5bj.c
opencl/: myGPU_openclInfo.txt
opencl/openclprogrammingguide/cl_book_own/: CMakeLists.txt
opencl/openclprogrammingguide/cl_book_own/cmake/: FindOpenCL.cmake
opencl/openclprogrammingguide/cl_book_own/src/: CMakeLists.txt
opencl/openclprogrammingguide/cl_book_own/src/chapter3/OpenCLConvolution/: Convolution.cl  Convolution.cpp  cmake_install.cmake
opencl/openclprogrammingguide/cl_book_own/src/chapter3/OpenCLInfo/: CMakeLists.txt  openclinfo.cpp
opencl/openclprogrammingguide/cl_book_own/src/chapter3/openclcontext/: CMakeLists.txt  openclcontext.cpp
opencl/openclprogrammingguide/cl_book_own/src/chapter4/pg111/: pg111  pg111.cpp
(+4 files in other folders)
